--- a/src/components/ReversePreviewBox.css
+++ b/src/components/ReversePreviewBox.css
@@ -1,5 +1,6 @@
 .reverse-previewbox-container {
     width: 100%;
+    z-index: 1;
 }
 
 .reverse-previewbox-block {
@@ -7,9 +8,21 @@
     margin: auto;
 }
 
-.reverse-scroll-text {
-    position: fixed;
+.reverse-scroll-box {
+    width: fit-content;
+    margin: auto;
+    text-align: center;
+}
+
+.reverse-scroll-text,
+.reverse-down-arrow {
+    position: relative;
     visibility: hidden;
+    opacity: 0;
+    /* Initial opacity set to 0 */
+    font-size: 24px;
+    transition: opacity 1s ease-in-out, font-size 1s ease-in-out;
+    /* Include opacity in the transition */
 }
 
 .reverse-down-arrow,
@@ -17,8 +30,18 @@
     padding: 10px;
     display: grid;
     font-size: 24px;
-    transition: font-size 0.3s ease;
 }
+
+.reverse-previewbox-block:hover .reverse-scroll-text,
+.reverse-previewbox-block:hover .reverse-down-arrow {
+    position: relative;
+    opacity: 1;
+    /* Set opacity to 1 on hover */
+    font-size: 36px;
+    visibility: visible;
+}
+
+
 
 .reverse-previewbox-block:hover .reverse-scroll-text,
 .reverse-previewbox-block:hover .reverse-down-arrow {
@@ -40,7 +63,7 @@
 
 .reverse-previewbox-block-item {
     padding: 20px;
-    width: 500px;
+    width: fit-content;
     height: 600px;
     margin: auto;
     border: 2px solid #000;
@@ -50,7 +73,7 @@
 }
 
 .reverse-previewbox-image-item {
-    width: fit-content;
+    width: 500px;
     margin: auto;
 }
 
